--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "babel-plugin-inline-react-svg": "^1.1.2",
+    "babel-plugin-inline-react-svg": "^2.0.0",
+    "mongoose": "^5.11.17",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
