--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "babel-plugin-inline-react-svg": "^2.0.0",
     "mongoose": "^5.11.17",
     "next": "10.0.6",
