--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "axios": "^0.21.1",
+    "@chakra-ui/react": "^2.2.9",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "axios": "^0.27.2",
     "babel-plugin-inline-react-svg": "^2.0.0",
+    "framer-motion": "4.1.17",
     "mongoose": "^5.11.17",
-    "next": "10.0.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "styled-components": "^5.2.1"
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "prettier": "^2.2.1"
