--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "test": "jest --passWithNoTests",
     "start": "next start"
   },
   "dependencies": {
@@ -22,6 +23,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "prettier": "^2.2.1"
+    "@babel/preset-env": "^7.19.3",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "babel-jest": "^29.1.2",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
+    "prettier": "^2.2.1",
+    "react-test-renderer": "^18.2.0"
   }
 }
