--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@tanstack/react-query": "^4.10.3",
     "axios": "^0.27.2",
     "babel-plugin-inline-react-svg": "^2.0.0",
     "framer-motion": "4.1.17",
